# Scrabble_Proyecto1

./: README.md
LOGICA/: CMakeLists.txt  Dictionary.cpp  Dictionary.h  dictionary.cpp  dictionary.h  game.cpp  game.h  keyboard.cpp  keyboard.h  linkedlist.cpp  linkedlist.h  main.cpp  node.cpp  node.h  player.cpp  player.h  tokens.cpp  tokens.h
SERVER/: Board.cpp  Board.h  CMakeLists.txt  Client.cpp  Client.h  Dictionary.cpp  Dictionary.h  Game.cpp  Game.h  JSON.cpp  JSON.h  LinkedList.cpp  LinkedList.h  Node.cpp  Node.h  Observer.cpp  Observer.h  Player.cpp  Player.h  Server.cpp  Server.h  Subject.cpp  Subject.h  Tokens.cpp  Tokens.h  basura.cpp  basura.h  dictionary.txt  main.cpp
SERVER/documentation/html/: _board_8h_source.html  _dictionary_8h_source.html  _game_8h_source.html  _j_s_o_n_8h_source.html  _linked_list_8h_source.html  _node_8h_source.html  _player_8h_source.html  _server_8h_source.html  _tokens_8h_source.html  annotated.html  class_board-members.html  class_board.html  class_dictionary-members.html  class_dictionary.html  class_game-members.html  class_game.html  class_j_s_o_n-members.html  class_j_s_o_n.html  class_linked_list-members.html  class_linked_list.html  class_node-members.html  class_node.html  class_player-members.html  class_player.html  class_player__coll__graph.dot  class_player__coll__graph.md5  class_server-members.html  class_server.html  class_server__coll__graph.dot  class_server__coll__graph.md5  class_tokens-members.html  class_tokens.html  classes.html  files.html  functions.html  functions_func.html  functions_vars.html  graph_legend.html  index.html  menudata.js  (+2 more)
SERVER/documentation/html/search/: all_1.js  all_10.js  all_12.js  all_2.js  all_3.js  all_4.js  all_5.js  all_7.js  all_8.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_1.js  classes_9.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_a.js  functions_b.js  functions_c.js  (+14 more)
SERVER/doxygen/: Doxyfile
SocketsFuncionales/Client/: CMakeLists.txt  Client.cpp  JSON.h
SocketsFuncionales/Server/: CMakeLists.txt  JSON.cpp  JSON.h  Server.cpp  Server.h
(+111 files in other folders)
